--- a/src/styles/helpers/fonts.scss
+++ b/src/styles/helpers/fonts.scss
@@ -4,94 +4,88 @@
   font-style: normal;
   font-weight: 700;
 }
-// @font-face {
-//   src: url('../../assets/fonts/Akrobat-ExtraBold.otf');
-//   font-family: 'Akrobat';
-//   font-style: normal;
-//   font-weight: 800;
-//   font-display: swap;
-// }
-// @font-face {
-//   src: url('../../assets/fonts/Akrobat-Light.otf');
-//   font-family: 'Akrobat';
-//   font-style: normal;
-//   font-weight: 300;
-//   font-display: swap;
-// }
 
-// @font-face {
-//   src: url('../../assets/fonts/Akrobat-Regular.otf');
-//   font-family: 'Akrobat';
-//   font-style: normal;
-//   font-weight: 400;
-//   font-display: swap;
-// }
-// @font-face {
-//   src: url('../../assets/fonts/Akrobat-SemiBold.otf');
-//   font-family: 'Akrobat';
-//   font-style: normal;
-//   font-weight: 600;
-//   font-display: swap;
-// }
-// @font-face {
-//   src: url('../../assets/fonts/Akrobat-Thin.otf');
-//   font-family: 'Akrobat';
-//   font-style: italic;
-//   font-weight: 100;
-//   font-display: swap;
-// }
+@font-face {
+  src: url('../assets/fonts/Akrobat-ExtraBold.ttf');
+  font-family: 'Akrobat';
+  font-style: normal;
+  font-weight: 800;
+}
 
-// @font-face {
-//   src: url('../../assets/fonts/GLOBER\ -\ BOLD.OTF');
-//   font-family: 'ProximaNova';
-//   font-style: normal;
-//   font-weight: 700;
-//   font-display: swap;
-// }
-// @font-face {
-//   src: url('../../assets/fonts/GLOBER\ -\ BOLD\ ITALIC.OTF');
-//   font-family: 'BebasNeue';
-//   font-style: normal;
-//   font-weight: 400;
-//   font-display: swap;
-// }
+@font-face {
+  src: url('../assets/fonts/Akrobat-ExtraLight.ttf');
+  font-family: 'Akrobat';
+  font-style: normal;
+  font-weight: 200;
+}
 
-// @font-face {
-//   src: url('../../assets/fonts/GLOBER\ -\ LIGHT.OTF');
-//   font-family: 'BebasNeue';
-//   font-style: normal;
-//   font-weight: 400;
-//   font-display: swap;
-// }
+@font-face {
+  src: url('../assets/fonts/Akrobat-Regular.ttf');
+  font-family: 'Akrobat';
+  font-style: normal;
+  font-weight: 400;
+}
 
-// @font-face {
-//   src: url('../../assets/fonts/GLOBER\ -\ LIGHT\ ITALIC.OTF');
-//   font-family: 'BebasNeue';
-//   font-style: normal;
-//   font-weight: 400;
-//   font-display: swap;
-// }
+@font-face {
+  src: url('../assets/fonts/Akrobat-Light.ttf');
+  font-family: 'Akrobat';
+  font-style: normal;
+  font-weight: 300;
+}
 
-// @font-face {
-//   src: url('../../assets/fonts/GLOBER\ -\ REGULAR.OTF');
-//   font-family: 'BebasNeue';
-//   font-style: normal;
-//   font-weight: 400;
-//   font-display: swap;
-// }
+@font-face {
+  src: url('../assets/fonts/Akrobat-SemiBold.ttf');
+  font-family: 'Akrobat';
+  font-style: normal;
+  font-weight: 600;
+}
 
-// @font-face {
-//   src: url('../../assets/fonts/GLOBER\ -\ REGULAR\ ITALIC.OTF');
-//   font-family: 'BebasNeue';
-//   font-style: normal;
-//   font-weight: 400;
-//   font-display: swap;
-// }
+@font-face {
+  src: url('../assets/fonts/Akrobat-Thin.ttf');
+  font-family: 'Akrobat';
+  font-style: normal;
+  font-weight: 100;
+}
 
-// @font-face {
-//   src: url('../../assets/fonts/GLOBER\ -\ REGULAR\ ITALIC.OTF');
-//   font-family: 'BebasNeue';
-//   font-style: normal;
-//   font-weight: 400;
-//   font-display: swap;
-// }
+@font-face {
+  src: url('../assets/fonts/GLOBER-BOLD.ttf');
+  font-family: 'Glober';
+  font-style: normal;
+  font-weight: 700;
+}
+
+@font-face {
+  src: url('../assets/fonts/GloberThin.ttf');
+  font-family: 'Glober';
+  font-style: normal;
+  font-weight: 100;
+}
+
+@font-face {
+  src: url('../assets/fonts/GLOBER-LIGHT.ttf');
+  font-family: 'Glober';
+  font-style: normal;
+  font-weight: 300;
+}
+
+@font-face {
+  src: url('../assets/fonts/GLOBER-HEAVY.ttf');
+  font-family: 'Glober';
+  font-style: normal;
+  font-weight: 900;
+}
+
+@font-face {
+  src: url('../assets/fonts/GLOBER-REGULAR.ttf');
+  font-family: 'Glober';
+  font-style: normal;
+  font-weight: 400;
+}
+
+@font-face {
+  src: url('../assets/fonts/GLOBER-SEMIBOLD.ttf');
+  font-family: 'Glober';
+  font-style: normal;
+  font-weight: 600;
+}
+
