--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,3 +12,10 @@
 @import './helpers/fonts';
 
 @import './blocks/header';
+@import './blocks/products';
+@import './blocks/calc';
+@import './blocks/example';
+@import './blocks/price';
+@import './blocks/about-us';
+@import './blocks/contacts';
+@import './blocks/footer'
