--- a/src/styles/helpers/button.scss
+++ b/src/styles/helpers/button.scss
@@ -1,3 +1,14 @@
+button {
+    padding: 0;
+    border: none;
+    font: inherit;
+    color: inherit;
+    background-color: transparent;
+  /* отображаем курсор в виде руки при наведении; некоторые
+    считают, что необходимо оставлять стрелочный вид для кнопок */
+    cursor: pointer;
+  }
+
 .btn {
     user-select: none;
     font-size: 15px;
@@ -5,13 +16,22 @@
     letter-spacing: 0.9px;
     font-family: 'Glober';
     font-weight: 700;
-    border: 2px solid $btn-color;
     background: $primary-color;
-    transition: all 500ms ease;
-    cursor: pointer;
-    color: white;
-    margin-top: 30px;
-    padding: 15px 25px 20px;
+    transition: all 500ms ease;    
+    color: white;    
+    padding: 15px 25px 15px;
+    outline: none !important;
+    text-transform: uppercase;
+    font-family: 'Glober';
+    font-size: 14px;
+    box-sizing: border-box;
+    border: 2px solid $primary-color;
+
+    &-transparent {
+        background: transparent;
+        border: 2px solid black;
+        color: black;
+    }
 
     &:hover {        
         box-shadow: 3px -1px 33px -9px rgba(0,0,0,0.75);
