--- a/src/styles/helpers/form.scss
+++ b/src/styles/helpers/form.scss
@@ -16,34 +16,34 @@
   }
 
   &__label {
-    position: absolute;
-    top: 20px;
-    left: 17px;
+    display: block;
+    text-align: center;
+    font-family: 'Glober';
+    font-weight: 600;
+    margin-top: 33px;
     transform-origin: 0 50%;
-    font-size: 20px;
+    font-size: 16px;
     line-height: 1;
     letter-spacing: -0.03em;
-    color: #707479;
+    color: #555555;
     transition: transform 0.2s ease;
     cursor: text;
   }
 
   &__input {
-    width: 100%;
-    height: 43px;
+    width: 244px;
+    height: 51px;
     padding: 0 10px;
-    border: 2px solid transparent;
-    border-radius: 5px;
+    margin-top: 10px;
     font-size: 20px;
     line-height: 1;
     letter-spacing: -0.03em;
-    color: #707479;
-    background: #F1EBF1;
+    color: #555555;
+    background: white;
+    border: 2px solid #afafaf;
 
     &:focus {
       outline: none;
-      border-bottom: 2px solid #707479;
-      font-weight: 500;
     }
   } 
 
