--- a/src/styles/blocks/calc.scss
+++ b/src/styles/blocks/calc.scss
@@ -24,15 +24,30 @@
   &__row {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     padding: 20px 50px 25px 35px;     
 
   }
 
+  &__col {
+    @include mobile {
+      width: 100%;
+    }
+  }
+
   &__select {
+    font-family: 'Glober';
+    font-weight: 400;
+    font-size: 14px;
+    color: #afafaf;
     margin-top: 10px;
     width: 227px;
     height: 35px;
     border: 2px solid #afafaf;
+
+    @include mobile {
+      width: 100%;
+    }
 
     &:focus {
       outline: none;
@@ -46,6 +61,7 @@
   &__text {
     width: 210px;
     margin: 0 auto;
+    padding-bottom: 30px;
     font-family: 'Glober';
     font-weight: 400;
     font-size: 12px;
@@ -60,4 +76,10 @@
     margin-bottom: 25px;
   }
 
+}
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
 }
