--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -2,15 +2,28 @@
   background: #1E1E1E;
   padding: 55px 0 45px;
 
+  @include mobile {
+    padding: 0;
+  }
+
   &__inner {
     position: relative;
     border: 2px solid black;
-    padding: 55px 60px 40px;
+    padding: 55px 60px 40px;    
+
+    @include mobile {
+      border: none;
+      padding: 67px 21px 40px;
+    }
   }
 
   &__wrapper {
     display: flex;
     justify-content: space-between;
+
+    @include mobile {
+      flex-direction: column;
+    }
   }
 
   &__title {
@@ -18,9 +31,18 @@
     left: 50%;
     transform: translateX(-50%);
     background: #1E1E1E;
-    top: -15px;
+    top: 22px;
     color: white;
     padding: 0 20px 0;
+    font-family: 'Glober';
+    font-size: 36px;
+    font-weight: 300;
+
+
+    @include mobile {
+      font-size: 26px;
+      width: 100%;
+    }
   }
 
   &__text {
@@ -40,11 +62,19 @@
 
     &:not(:first-child) {
       margin-top: 15px;
+
+      @include mobile {
+        margin-top: 0;
+      }
     }
   }
 
   &__right {
     width: 249px;
+
+    @include mobile {
+      margin-top: 40px;
+    }
   }
 
   &__item {
