--- a/src/styles/blocks/example.scss
+++ b/src/styles/blocks/example.scss
@@ -1,6 +1,12 @@
 .example {
   padding: 42px 0 28px;
 
+  @include mobile {
+    padding: 20px 41px;
+    display: none;
+    padding-right: 0;
+  }
+
   &__list {
     max-width: 783px;
     width: 100%;
@@ -9,11 +15,21 @@
     justify-content: space-between;
     flex-wrap: wrap;
     margin-top: 19px;
+
+    @include mobile {
+      flex-wrap: nowrap;
+    }
   }
 
   &__item {
     width: 221px;
     margin-top: 25px;
+
+    @include mobile {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
   }
 
   &__desc {
@@ -26,3 +42,12 @@
     line-height: 24px;
   }
 }
+
+.mobile {
+  display: none;
+
+  @include mobile {
+    display: block;
+  }
+}
+
