--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -3,11 +3,19 @@
     padding: 35px 30px;
     display: flex;
     justify-content: space-between;
+
+    @include mobile {
+      padding: 12px 0;
+    }
   }
 
   .header {
     &__phone {
       font-size: 61px;
+
+      @include mobile {
+        font-size: 20px;
+      }
     }
   }
 }
