--- a/src/styles/helpers/button.scss
+++ b/src/styles/helpers/button.scss
@@ -27,6 +27,13 @@ button {
     box-sizing: border-box;
     border: 2px solid $primary-color;
 
+    @include mobile {
+      width: 234px;
+      padding: 0;
+      font-size: 14px;
+      height: 46px;
+    }
+
     &-transparent {
         background: transparent;
         border: 2px solid black;
