--- a/src/styles/blocks/price.scss
+++ b/src/styles/blocks/price.scss
@@ -94,6 +94,10 @@
       height: 212px;
       border-left: 1px solid black;
       border-bottom: 1px solid black;
+
+      @include mobile {
+        display: none;
+      }
     }
 
     &:after {
@@ -105,6 +109,10 @@
       height: 212px;
       border-right: 1px solid black;
       border-bottom: 1px solid black;
+
+      @include mobile {
+        display: none;
+      }
     }
 
     @include mobile {
