--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -18,4 +18,5 @@
 @import './blocks/price';
 @import './blocks/about-us';
 @import './blocks/contacts';
-@import './blocks/footer'
+@import './blocks/footer';
+@import './blocks/thanks';
