--- a/src/styles/blocks/thanks.scss
+++ b/src/styles/blocks/thanks.scss
@@ -1,7 +1,23 @@
 .thanks {
+    position: relative;
+    padding: 30px 20px 20px;
+    border: 2px solid $primary-color;
+    display: none;
+    background: white;
+
+    &__back {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        left: -2px;
+        top: -38px;
+        width: 184px;
+        height: 36px;
+    }
 
     &__inner {
-        display: none;
+        display: flex;        
         flex-direction: column;
         align-items: center;
     }
@@ -71,6 +87,7 @@
         font-size: 14;
         font-weight: 700;
         color: $primary-color;
+        text-align: center;
     }
 
     &__cost {
