--- a/src/styles/blocks/thanks.scss
+++ b/src/styles/blocks/thanks.scss
@@ -96,6 +96,7 @@
         font-family: 'Glober';
         font-size: 56px;
         font-weight: 400;
+        height: 60px;
     }
 
     &__items {
