--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -499,21 +499,35 @@
     margin-top: 50px;
     display: flex;
     justify-content: space-around;
+
+    @include mobile {
+      justify-content: space-between;
+    }
   }
 
   &__subtitle-left,
-  &__subtitle-right {
+  &__subtitle-right {    
     font-family: 'Glober';
     font-weight: 900;
     font-size: 30px;
     color: $primary-color;
 
-    @include mobile {
+    @include mobile {    
+      background-color: white; 
+      border: 2px solid $primary-color;
+      padding: 10px 0;
+      width: 49%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       color: #8F8F8F;
       cursor: pointer;
 
       &.active {
-        color: #FF014D;
+        background-color: #4d546c;
+        border: 2px solid $primary-color;
+        border-bottom: none;
+        color: white;
       }
     }
   }
@@ -521,6 +535,7 @@
   &__content {
     position: relative;
     border: 2px solid $primary-color;
+    border-top: none;
     margin-top: 32px;
     background-color: #4d546c;
     display: flex;
@@ -533,9 +548,9 @@
       top: -40px;
       left: 50%;
       transform: translateX(-50%);
-      background-color: $primary-color;
+      background-color: $primary-color;      
 
-      @include tablet-and-mobile {
+      @include tablet-and-mobile {        
         height: 108%;
       }
 
@@ -559,7 +574,10 @@
       @include mobile {
         display: none;
       }
+    }
 
+    @include mobile {
+      margin-top: 0;
     }
   }
 
