--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -522,6 +522,7 @@
       align-items: center;
       color: #8F8F8F;
       cursor: pointer;
+      font-size: 22px;
 
       &.active {
         background-color: #4d546c;
