--- a/src/styles/blocks/thanks.scss
+++ b/src/styles/blocks/thanks.scss
@@ -23,7 +23,7 @@
     }
 
     &__subtitle {
-        display: block;
+        display: none;
         position: relative;
         margin-top: 30px;
         font-family: 'Glober';
