--- a/src/styles/blocks/calc.scss
+++ b/src/styles/blocks/calc.scss
@@ -18,7 +18,7 @@
   &__form {
     background-color: white;
     margin-top: 40px;
-    box-shadow: 0px 2px 14px 0px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 6px 10px 0px rgba(0,0,0,0.21);
   }
 
   &__label {
@@ -47,7 +47,7 @@
 
   &__top {
     padding: 20px 50px 25px 35px;
-    box-shadow: 0px 11px 17px -13px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 6px 10px 0px rgba(0,0,0,0.21);
 
     @include tablet-and-mobile {
       padding: 25px;
