--- a/src/styles/helpers/button.scss
+++ b/src/styles/helpers/button.scss
@@ -37,7 +37,7 @@ button {
     }
 
     &-transparent {
-        background: transparent;
+        background: white;
         border: 2px solid black;
         color: black;
     }
